# sdpf_ros2

./: .gitignore  CONTRIBUTING.md  README.md  sdpf_ros2.repos  vic_controllers_ros2.repos
sdpf_bringup/: package.xml  setup.cfg  setup.py
sdpf_bringup/config/: fd.config.xacro  ft_sensor_ethercat_config.yaml  impedance_controllers_config.yaml
sdpf_bringup/launch/: launch_impedance_control.launch.py  run_exp.launch.py
sdpf_bringup/plotjuggler/: dashboard.xml
sdpf_bringup/ros2_control/: ft_sensor.ros2_control.xacro
sdpf_nodes/: package.xml  setup.py
sdpf_nodes/sdpf_nodes/: _OBSELETE_ppf_node.py  __init__.py  bednarczyk_node.py  pf_node_base.py  sdpf_node.py  stiffness_estimation_node.py
sdpf_nodes/test/: test_copyright.py
sdpf_notebooks/: plot_exp_data.ipynb  plot_exp_data.py
sdpf_notebooks/_commons/: bag_utils.py  environment_2D.py  nb_commons_1D.py  nb_commons_ND.py  plot_utils_1D.py
sdpf_notebooks/_sandbox/: simulation_1D_general_comparisons.py  test_visualization_LP.py
sdpf_notebooks/simulations_SDPF/: 00_simulation_1D_general_comparisons.py  01-B_simulation_1D_variable_inertia.py  01_simulation_1D_SIPF_vs_SDPF.py  02_illustration_z_min_adaptative.py  03_simulation_1D_SIPF+_vs_SDPF_vs_SDPF-integrals.py  04_simulation_1D_passivity_tank.py  05_effect_of_z_max_and_tau_z_min.py  06_effect_of_alpha_and_epsilon.py  LPP_QPP_utils.py  plot_utils.py  simulation_scenarios.py
