<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdpf_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tpoignonec@unistra.fr">tpoignonec</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>cartesian_vic_controller</exec_depend>
  <exec_depend>cartesian_control_msgs</exec_depend>
  <exec_depend>fd_hardware</exec_depend>
  <exec_depend>fd_inertia_broadcaster</exec_depend>
  <exec_depend>fd_clutch_broadcaster</exec_depend>

  <exec_depend>rosbag2_storage_mcap</exec_depend> <!-- Only for IRON and below... -->

  <exec_depend>sdpf_nodes</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
